--- a/src/app/calendar/totals-action-items/totals-action-items.component.html
+++ b/src/app/calendar/totals-action-items/totals-action-items.component.html
@@ -17,7 +17,7 @@
   <div class="card-content table-responsive table-full-width">
     <table class="table table-striped">
       <thead class="title clrs-h4-font">
-        <th class="text-left table td-clrs">Activity</th>
+        <th class="text-left table td-clrs">Task Activity</th>
         <th class="table td-clrs">Start Date</th>
         <th class="table td-clrs">End Date</th>
         <th class="text-right table td-clrs">Hours Spent</th>
