--- a/src/app/company/enterprise-profile/draft/draft.html
+++ b/src/app/company/enterprise-profile/draft/draft.html
@@ -2583,7 +2583,7 @@
                                                                                                             (click)="selectTask(tss)"
                                                                                                             data-toggle="modal"
                                                                                                             data-target="#newAction">
-                                                                                                            <small>Add activity</small></button>
+                                                                                                            <small>Add Task Activity</small></button>
                                                                                                     </div>
                                                                                                 </div>
                                                                                             </li>
