--- a/src/app/company/enterprise-profile/draft/enterprise-profile.component.html
+++ b/src/app/company/enterprise-profile/draft/enterprise-profile.component.html
@@ -2201,7 +2201,7 @@
                                                     </div>
                                                     <button class="btn-link btn-round primary" (click)="selectTask(tss)"
                                                       data-toggle="modal" data-target="#newAction">
-                                                      <small>Add activity</small></button>
+                                                      <small>Add Task Activity</small></button>
                                                   </div>
                                                 </div>
                                               </li>
@@ -2232,7 +2232,7 @@
                         <div class="tab-pane" id="weekly" role="tabpanel" aria-expanded="false">
                           <div class="row card-category clrs-h4-font">
                             <div class="col-xs-1"></div>                            
-                            <div class="col-md-3">Activity</div>
+                            <div class="col-md-3">Task Activity</div>
                             <div class="col-md-3 text-left na-an">Start</div>
                             <div class="col-md-3 text-left ma-an">Finish</div>
                             <div class="col-md-3 text-left ma-an">Actions</div>
@@ -2274,7 +2274,7 @@
                           <div class="card-body" style="margin-top: -10px">
                             <div class="row">
                               <!-- <div class="col-sm-1 card-header text-center"></div> -->
-                              <div class="col-sm-2 card-header text-center">Activity</div>
+                              <div class="col-sm-2 card-header text-center">Task Activity</div>
                               <div class="col-sm-3 card-header">Target Qty</div>
                               <div class="col-sm-2 card-header text-left">Start </div>
                               <div class="col-sm-2 card-header text-left">Finish </div>
@@ -2333,7 +2333,7 @@
                                 <div class="col-md-9"></div>
                                 <div class="col-md-3">
                                   <button class="primary btn-link" data-toggle="modal" data-target="#newActionToday"> <!-- (click)="selectEditAction(item);showActionParticipants()"  -->
-                                    New Activity
+                                    New Task Activity
                                   </button>
                                 </div>
                               </div>
@@ -3064,7 +3064,7 @@
       <div class="card-body ">
         <div class="card-header text-center">
           <p class="col-md-8 ml-auto mr-auto col-form-label na-an info" style="color:steelblue">
-            <font size=4>New Activity for <br>{{ selectedTask.name }} task</font>
+            <font size=4>New Task Activity for <br>{{ selectedTask.name }} task</font>
           </p>
         </div>
         <hr>
@@ -3129,7 +3129,7 @@
       <div class="card-body ">
         <div class="card-header text-center">
           <p class="col-md-10 ml-auto mr-auto title na-an info" style="color:steelblue">
-            <font size=4>New Activity for {{ selectedTask.name }} task</font>
+            <font size=4>New Task Activity for {{ selectedTask.name }} task</font>
           </p>
         </div>
         <hr>
