--- a/src/app/dashboard/draft/dashboard.component.html
+++ b/src/app/dashboard/draft/dashboard.component.html
@@ -101,7 +101,7 @@
         <div class="card-content btn-magnify">
           <div class="col-sm-12 ml-auto mr-auto" style="padding-bottom: -1em ">
             <div class="clrs-h1" style="color:steelblue">
-              <a><i class="fa fa-tasks fa-fw"></i> Colours Projects</a>
+              <a><i class="fa fa-tasks fa-fw"></i> Colours Project</a>
             </div>
             <div class="text-left category" style="margin-left:1.0em; color: steelblue; ">
               <a>My Current Priority Projects</a>
