--- a/src/app/departmental-rpts/departmental-rpts.component.html
+++ b/src/app/departmental-rpts/departmental-rpts.component.html
@@ -19,7 +19,7 @@
               <li class="nav-item">
                 <a class="pagination pagination-primary" title="click to see the timesheet" data-toggle="tab"
                   href="#link8" role="tablist">
-                  Activity log
+                  Task Activity log
                 </a>
               </li>
               <span style="color:darkslategrey"> -|- </span>
@@ -40,7 +40,7 @@
             </div>
             <div class="tab-pane" id="link8">
               <div class="col-md-12">
-                <div class="card-header text-left">Activity log</div><br>
+                <div class="card-header text-left">Task Activity log</div><br>
 
               </div>
               <br>
