--- a/src/app/individual-rpts/individual-rpts.component.html
+++ b/src/app/individual-rpts/individual-rpts.component.html
@@ -25,7 +25,7 @@
               <li class="nav-item">
                 <a class="pagination pagination-primary" title="click to see the timesheet" data-toggle="tab" href="#link8"
                   role="tablist">
-                  Activity log
+                  Task Activity log
                 </a>
               </li>
               <span style="color:darkslategrey">  -|-  </span>
