--- a/src/app/individual-rpts/r-time-spent-e/r-time-spent-e.component.html
+++ b/src/app/individual-rpts/r-time-spent-e/r-time-spent-e.component.html
@@ -8,7 +8,7 @@
     <span><select id="name-list1"></select></span>
     <span> &nbsp;&nbsp; Hierarchy:</span><span id="hierarchy"></span></h2>
 
-<h3>Total Time spent on an Activity for the period from <span>
+<h3>Total Time spent on an Task Activity for the period from <span>
         <!-- placeholder will not work, so stuck with dd----yyyyy -->
         <input type="date" id="startdate1">
     </span> to <span>
