--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -46,13 +46,13 @@
                     </h4>
                     <div class="spacer" style="height: 1em"></div>
                     <p style="margin-top:10px ; margin-bottom :10px; color:#333366">
-                        <font size=2><b>Colours tells the story of whats happening on the ground on your project right now</b></font><br>
+                        <font size=2><b>Colours tells the story of whats happening on the ground at all your projects</b></font><br>
                     </p>
                     <p style="margin-top:10px ; margin-bottom :10px; color:#333366">
-                      <font size=2><b>Colours tells the story of whats happening across your enterprise right now</b></font><br>
+                      <font size=2><b>Colours tells the story of whats happening across your enterprise hour in, hour out</b></font><br>
                     </p>
                     <p style="margin-top:10px ; margin-bottom :10px; color:#333366">
-                      <font size=2><b>Also tells the story of your true productivity colours</b></font><br>
+                      <font size=2><b>Colours also tells the story of your true personal productivity colours</b></font><br>
                     </p>
 
                     <div *ngIf="showemailLogin">
