--- a/src/app/shared/navbar/draft.html
+++ b/src/app/shared/navbar/draft.html
@@ -46,7 +46,7 @@
             <li class="nav-item btn-rotate dropdown">
                 <a class="nav-link dropdown-toggle card-category" href="pablo" id="navbarDropdownMenuLink" data-toggle="dropdown"
                     aria-haspopup="true" aria-expanded="true">
-                    <i class="nc-icon nc-globe-2"></i>Colours Companies
+                    <i class="nc-icon nc-globe-2"></i>Colours Companie
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
                     <a class="dropdown-item btn-primary btn-link" *ngFor="let company of companies | async" (click)="setCompany(company)"
@@ -60,7 +60,7 @@
             <li class="nav-item btn-rotate dropdown">
                 <a class="nav-link dropdown-toggle card-category" href="pablo" id="navbarDropdownMenuLink" data-toggle="dropdown"
                     aria-haspopup="true" aria-expanded="true">
-                    <i class="fa fa-folder-o [&#xf114;]"></i>Colours Projects
+                    <i class="fa fa-folder-o [&#xf114;]"></i>Colours Project
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
                     <a class="dropdown-item btn-warning btn-link" style="color:rgb(209, 135, 16)" disabled>Enterprise
