--- a/src/assets/css/colours.css
+++ b/src/assets/css/colours.css
@@ -230,6 +230,27 @@
 
 }
 
+.clrs-h4-font {
+  /* font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
+  font-family: ABeeZee;
+  /* color: steelblue; */
+  color: #333366;
+  font-size: 18px;
+
+}
+
+
+.clrs-h1-font {
+  /* font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
+  font-family: ABeeZee;
+  /* color: steelblue; */
+  color: #333366;
+  /* font-size: 18px; */
+  font-size: 23px;
+
+}
+
+
 .dash-size {
   width: 630px;
   padding-right: 0px;
@@ -350,8 +371,12 @@
 }
 
 .scroll-em {
-  width: 330px;
+  /* width: 330px; */
+  width: inherit;
   height: 110px;
+  min-width: 28em;
+  max-width: inherit;
+  /* height: inherit; */
   overflow-y: auto;
   overflow-x: hidden;
   /* overscroll-behavior: */
